--- a/Employee_Manager/Employee_Manager/Employee_Manager.csproj
+++ b/Employee_Manager/Employee_Manager/Employee_Manager.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Addresses.cs" />
+    <Compile Include="Dienstplan.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="Employee_Manager.cs" />
     <Compile Include="Menue.Cs" />
