--- a/ShootingStar/ShootingStar/ShootingStar.csproj
+++ b/ShootingStar/ShootingStar/ShootingStar.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,10 +48,15 @@
   <ItemGroup>
     <Compile Include="Blöcke\Blöcke.cs" />
     <Compile Include="Blöcke\Erdblock.cs" />
+    <Compile Include="Generals\Functions.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Generals\PlayerSingleton.cs" />
     <Compile Include="Generals\Program.cs" />
+    <Compile Include="Items\Apple.cs" />
+    <Compile Include="Items\HealthItems.cs" />
+    <Compile Include="Interface\Interface.cs" />
     <Compile Include="Inventory\Inventory.cs" />
+    <Compile Include="Items\Loot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Spieler.cs" />
     <Compile Include="Waffen\Fäuste.cs" />
@@ -57,6 +65,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
