--- a/SchoolSecond/Database Web Application/Database Web Application/Database Web Application.csproj
+++ b/SchoolSecond/Database Web Application/Database Web Application/Database Web Application.csproj
@@ -15,10 +15,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FirebaseAdmin" Version="2.4.0" />
     <PackageReference Include="FirebaseAuthentication.net" Version="4.1.0" />
     <PackageReference Include="FirebaseDatabase.net" Version="4.2.0" />
-    <PackageReference Include="FireSharp" Version="2.0.4" />
-    <PackageReference Include="FireSharp.Serialization.JsonNet" Version="1.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
   </ItemGroup>
 
